RocketShip Changelog

05-23-2015 : version 1.3.1

	- Added 'fromPublic' method in HTML helper
	- Added "failsafe" class for Session (if mcrypt is not available and not using database)
	- Fixed bad path in 'rs' tool

05-21-2015 : version 1.3 : Thunderdome

    - Code optimization
    - Renamed 'generate' to 'rs'
    - Moved 'rs' to root of RocketShip
    - Added new debugger bar class (php debugbar)
    - Added new configuration flag under 'development' for the debugger
    - Now catching some exceptions to pass them to the debugger
    - Now logging some key tasks to the timeline in the debugger
    - Added new Ajax controller by default (every /fr/ajax/* and /en/ajax/* are caught)
    - Minor bug fixes
    - Minor typo fixes
    - Versions and revisions will now be named.

05-04-2015

    - Fixed bug in Collection (primitives calls still around)
    - Added support for Cloudinary service for uploads

05-02-2015

    - Removed Primitives, more annoying than anything

03-29-2015

    - Moved partials to global view directory
    - Changed View class was adjusted for the new partials directory
    - Added Authentication level validation (assureLevel)
    - Update the cli template for the generate tool (now gives out more help)
    - Primitive Object Types now RTM
    - Upgrade version to 1.2.0

03-12-2015

    - Removed Validation class, replaced by Respect\Validation instead (way more powerful)
    - Fixed issues with number values of the Geocoder class
    - Updated the Guzzle library

03-11-2015 #2

    - Primitive Object Types BETA 4
    - Added ArrayAccess interface implementation to Collection (now object can be used with the standard array syntax)
    - Added Countable interface implementation to Collection (now you can also get count by using the standard count php method)
    - Added JsonSerializable interface implementation to Collection (now can easily be encoded to json without any change to your code)