@@ -3,6 +3,8 @@ RocketShip Changelog
 05-23-2015 : version 1.3.1
 
 	- Added 'fromPublic' method in HTML helper
+	- Added support for '/js' in public assets (looks for /javascript then /js)
+	- Added support for '/stylesheet' in public assets (looks for /css then /stylesheet)
 	- Added "failsafe" class for Session (if mcrypt is not available and not using database)
 	- Fixed bad path in 'rs' tool
 
